<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.lampnot.MainActivity">

    <Button
        android:id="@+id/button_authentication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/button_authentication"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/colorBlack"
        android:textColor="@color/colorWhite"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linear_lay"
        android:layout_below="@+id/button_authentication">

    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/linear_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:layout_weight="1"
            android:padding="24dp"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/button_stop"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"
            />

    </LinearLayout>

</RelativeLayout>
