<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.lampnot.MainActivity">


    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_above="@+id/linear_lay_details"
        >

        <ImageView
            android:id="@+id/ImageView_icon_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/TextView_app_details"
            android:paddingBottom="25dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            />

        <TextView
            android:id="@+id/TextView_app_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/Button_select_app"
            style="@style/TextAppearance.AppCompat.Widget.TextView.SpinnerItem"
            android:paddingBottom="40dp"/>



        <RelativeLayout
            android:id="@+id/rel_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/Button_select_app"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/TextView_dummy"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                />

            <TextView
                android:layout_below="@id/TextView_dummy"
                android:id="@+id/TextView_select_color"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/select_color"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                />

            <Spinner
                android:layout_below="@id/TextView_select_color"
                android:id="@+id/Spinner_select_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                />
        </RelativeLayout>

        <Button
            android:id="@+id/Button_select_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_app"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
            android:textColor="@color/colorBlack"
            />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/linear_lay_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/button_delete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/button_delete"
            android:layout_weight="1"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/button_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_done"
            android:layout_weight="1"
            android:padding="24dp"
            style="?android:attr/buttonBarButtonStyle"/>


    </LinearLayout>

</RelativeLayout>
